2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: The internal code correctly prefixes the path to a
	  directory with the filesystems name

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Added in some checks to fix path combining.

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFile.cs: Removing the call to free the pointer as i
	  shouldn't be doing that.

2007-09-25  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Fixed the XML parsing. It still borks when libgphoto2 returns
	  invalid XML. I need a proper workaround for mimetype detection when i
	  only have the metadata.
	* src/FileSystem.cs: GetFiles returns a list of files rather than strings
	* src/Files/MusicFile.cs: Identifier is 'AlbumName' not 'Album'

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Base/CameraFilesystem.cs, src/Base/Port.cs: Cosmetic changes to clean
	  up the four (unimportant) compile time warnings.

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Cosmetic

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs: Should be converting the string to byte[]
	* src/Abilities.cs: Simplified the code

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/MusicFile.cs: Metadata is parsed in the base class

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added a fixme
	* src/FileSystem.cs: Fixed infinite recursion ;)

2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Implemented metadata uploading/syncing and file downloading.
	* src/FileSystem.cs: Implemented file uploading
	* src/Files/GenericFile.cs, src/Files/MusicFile.cs, src/Files/ImageFile.cs:
	  Misc cosmetic changes

2007-09-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/ImageFile.cs: Added the supporting property code for the
	  ImageFile class

2007-09-18  Alan McGovern <alan.mcgovern@gmail.com> 
